[tool.poetry]
name = "exploring-hypermodern-python"
license = "MIT"
readme = "README.md"
version = "0.1.0"
description = "A project to test out hypermodern python tools."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
exploring-hypermodern-python = "exploring_hypermodern_python.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"